Partially implement parser